# sclog

./: .gitignore  CMakeLists.txt  conanfile.txt  configuration.toml  log.properties  log.tail.properties  readme.md  sclog.cpp  signer.cpp  signer.hpp  start.sh  utils.h
docker/: docker-compose.yml
docker/db/: Dockerfile
docker/db/data/: 1.create_db.sql  2.create_tables.sql
include/: entry.hpp
softhsm/: softhsm.conf
softhsm/data/04704bd5-19c9-e7a0-274b-87c66d5cb40d/: 1c84b008-5e40-872d-f590-256118cf3c8e.object  8002ad86-e8cb-edd7-7bb8-2ec12c07d6d6.object  token.object
src/: sclog.cpp  signer.cpp
tests/: send.sh
